fix: Inner buttons visibility by default

--- a/src/components/manage/Blocks/ConditionalDataBlock/edit.less
+++ b/src/components/manage/Blocks/ConditionalDataBlock/edit.less
@@ -22,11 +22,6 @@
   }
 
   .block {
-    .block-add-button,
-    .delete-button {
-      display: none;
-    }
-
     .block.selected::before {
       border-top-left-radius: 0;
     }
